--- a/ckanext/ckanpackager/theme/templates/package/search.html
+++ b/ckanext/ckanpackager/theme/templates/package/search.html
@@ -3,20 +3,13 @@
 {% resource 'ckanext-ckanpackager/main' %}
 
 {% block form %}
-  {% set facets = {
-    'fields': c.fields_grouped,
-    'search': c.search_facets,
-    'titles': c.facet_titles,
-    'translated_fields': c.translated_fields,
-    'remove_field': c.remove_field }
-  %}
-  {% set sorting = [
-    (_('Relevance'), 'score desc, metadata_modified desc'),
-    (_('Name Ascending'), 'title_string asc'),
-    (_('Name Descending'), 'title_string desc'),
-    (_('Last Modified'), 'metadata_modified desc'),
-    (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false) ]
-  %}
-  {% snippet 'snippets/search_form.html', form_id='dataset-search-form', type='dataset', query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, count=c.page.item_count, facets=facets, show_empty=request.params, error=c.query_error, fields=c.fields %}
-  {% snippet 'snippets/select_all_checkbox.html' %}
+  {{ super() }}
+  <div class="search-form" style="display: inline-flex; width: 100%; justify-content: space-between;">
+    <div style="justify-content: flex-start">
+      <p class="">{{ _("Select All") }}</p>
+    </div>
+    <div style="justify-content: flex-end;">
+      <input type="checkbox" checked data-module="ckanpackager-dl-package" data-module-check-type="all">
+    </div>
+  </div>
 {% endblock %}
