Remove test text.

--- a/ckanext/ckanpackager/theme/templates/package/snippets/resource_item.html
+++ b/ckanext/ckanpackager/theme/templates/package/snippets/resource_item.html
@@ -5,7 +5,7 @@
 {% ckan_extends %}
 
 {% block resource_item_description %}
-   <div style="position: absolute; top: 1em; right: 10em">BBB
+   <div style="position: absolute; top: 1em; right: 10em">
       <input type="checkbox" checked data-module="ckanpackager-dl-checkbox" data-module-resource-id="{{ res.id }}">
     </div>
   {{ super() }}
