--- a/ckanext/ckanpackager/theme/templates/snippets/package_item.html
+++ b/ckanext/ckanpackager/theme/templates/snippets/package_item.html
@@ -5,9 +5,8 @@
 {% ckan_extends %}
 
 {% block notes %}
-  <div style="float: right;">AAAA
+  <div style="float: right;">
     <input class="package_checkbox" type="checkbox" checked data-module="ckanpackager-dl-package" data-module-package-id="{{ package.id }}">
   </div>
   {{ super() }}
 {% endblock %}
-
