Block signup from non-academic emails

--- a/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_post_form.html
+++ b/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_post_form.html
@@ -2,14 +2,17 @@
     <div class="ckanpackager-form">
 
     <form action="/queue_resource_list" method="post">
+        <p>{{ _('All the currently selected records will be packaged and a FileZilla queue file sent to the email address registered with your account.') }}</p>
+
+        <label for="download_payload">Resource IDs</label>
         <input id="download_payload" type="text" name="download_payload" value='{"data": ["cat","dog","rabbit"]}'/>
 
-        <button class="ckanpackager-send btn btn-primary" type="submit">POST DATA</button>
 
-        <!--{% block action_buttons %}-->
+        {% block action_buttons %}
+            <button class="ckanpackager-send btn btn-primary" type="submit">Download All</button>
             <!--<a class="ckanpackager-send btn btn-primary" href="#">{{ _('Send') }}</a>-->
             <!--<a class="ckanpackager-cancel btn btn-warning" href="#">{{ _('Cancel') }}</a>-->
-        <!--{% endblock %}-->
+        {% endblock %}
     </form>
     </div>
 </div>
