Block signup from non-academic emails

--- a/ckanext/ckanpackager/theme/templates/package/resource_read.html
+++ b/ckanext/ckanpackager/theme/templates/package/resource_read.html
@@ -33,7 +33,7 @@
             {% endif %}
 
                 <li>{% snippet 'ckanpackager/snippets/package_resource.html',
-       res=res, pkg=pkg, bt_class="icon-download", bt_text=_('Download')
+       res=res, pkg=pkg, bt_class="fa fa-arrow-circle-o-down", bt_text=_('Download')
                   %}</li>
 
             {% if res.url and h.is_url(res.url) %}
