--- a/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_post_form.html
+++ b/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_post_form.html
@@ -1,18 +1,19 @@
+
 <div>
     <div class="ckanpackager-form">
 
-    <form action="/queue_resource_list" method="post">
-        <p>{{ _('All the currently selected records will be packaged and a FileZilla queue file sent to the email address registered with your account.') }}</p>
+        <form action="/queue_resource_list" method="post">
+            <p>{{ _('All the currently selected records will be packaged and a FileZilla queue file sent to the email address registered with your account.') }}</p>
 
-        <label for="download_payload">Resource IDs</label>
-        <input id="download_payload" type="text" name="download_payload" value='{"data": ["cat","dog","rabbit"]}'/>
+            <label for="download_payload" hidden>Resource IDs</label>
+            <input id="download_payload" type="text" name="download_payload" value='{"data": ["cat","dog","rabbit"]}' hidden/>
 
 
-        {% block action_buttons %}
+            {% block action_buttons %}
             <button class="ckanpackager-send btn btn-primary" type="submit">Download All</button>
             <!--<a class="ckanpackager-send btn btn-primary" href="#">{{ _('Send') }}</a>-->
             <!--<a class="ckanpackager-cancel btn btn-warning" href="#">{{ _('Cancel') }}</a>-->
-        {% endblock %}
-    </form>
+            {% endblock %}
+        </form>
     </div>
 </div>
