checkbox resource if in checked package

--- a/ckanext/ckanpackager/theme/templates/package/snippets/resource_item.html
+++ b/ckanext/ckanpackager/theme/templates/package/snippets/resource_item.html
@@ -6,7 +6,7 @@
 
 {% block resource_item_description %}
    <div style="position: absolute; top: 1em; right: 10em">
-      <input type="checkbox" checked data-module="ckanpackager-dl-checkbox" data-module-resource-id="{{ res.id }}">
+      <input type="checkbox" checked data-module="ckanpackager-dl-checkbox" data-module-resource-id="{{ res.id }}" data-module-package-id="{{ pkg.id }}">
    </div>
   {{ super() }}
 {% endblock %}
